set to common media adapter